--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cybernetic-factory
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://factory-server.mysql.database.azure.com:3306/factory?useSSL=true
 spring.datasource.username=sylse
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
