--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://factory-server.mysql.database.azure.com:3306/factory?useSSL=true
-spring.datasource.username=sylse
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:sqlserver://factoryapi-server.database.windows.net:1433;database=factory-database
+spring.datasource.username=sylse@factoryapi-server
+spring.datasource.password=KUSKUS123!
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+spring.datasource.encrypt=true
+spring.datasource.trustServerCertificate=false
+spring.datasource.hostNameInCertificate=*.database.windows.net
+spring.datasource.loginTimeout=30
+
+server.port=8080
